{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 80,
  "lineage": "7dc06b8f-4d69-363f-1d77-ba31293c8d89",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-app-8081",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8081"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-19T09:59:15.121-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "http-8081",
            "name": "http-8081",
            "network": "https://www.googleapis.com/compute/v1/projects/united-aura-252016/global/networks/default",
            "priority": 1000,
            "project": "united-aura-252016",
            "self_link": "https://www.googleapis.com/compute/v1/projects/united-aura-252016/global/firewalls/http-8081",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-app-8081"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mgdb-27017",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-19T09:59:15.356-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "mgdb-27017",
            "name": "mgdb-27017",
            "network": "https://www.googleapis.com/compute/v1/projects/united-aura-252016/global/networks/default",
            "priority": 1000,
            "project": "united-aura-252016",
            "self_link": "https://www.googleapis.com/compute/v1/projects/united-aura-252016/global/firewalls/mgdb-27017",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mgdb-27017"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mgdb",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20190905",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/united-aura-252016/zones/europe-west3-c/disks/mgdb-tf"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "mgdb-tf",
            "instance_id": "4327758158027488779",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-2-4096",
            "metadata": {
              "ssh-keys": "isakovasvitlana:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCo3sqEjoy3RjtKiildm/yvAGpBiKYEECnxbjKmPLOzZzkU7QdqcylNWYetRADkTVldoYmwGnMT8D3+4gfeusNNXJs4Yujx9RLtdVg65qivRDIRaopLIsuJV6A+hWcEvLD/DyEMmlF+gXyyOMNaGIMey7egFS8/uQ5etYFZURyXT9kZlRlgFSn7FlC1g8ONhzUdQu1czyOqedDTr3BRheVRKfg8UEMVh/KgVXKh9umv/pzn4dYcYEqOTPh1JamHUqz7X7stcMnMsPJNu4+SNnPvpiykesjaFXY5uDW+iNRO5kjfnInoCZlYsJwkQehjRoc7yRU0r5KRO9fwnEjlQdEh isakovasvitlana"
            },
            "metadata_fingerprint": "ERqJqECuvM4=",
            "name": "mgdb-tf",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.183.134",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/united-aura-252016/global/networks/default",
                "network_ip": "10.156.0.40",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/united-aura-252016/regions/europe-west3/subnetworks/default",
                "subnetwork_project": "united-aura-252016"
              }
            ],
            "project": "united-aura-252016",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/united-aura-252016/zones/europe-west3-c/instances/mgdb-tf",
            "tags": [
              "http-server",
              "https-server",
              "mgdb-27017"
            ],
            "tags_fingerprint": "_R4cu5LydJI=",
            "zone": "europe-west3-c"
          }
        }
      ]
    },
    {
      "module": "module.pd",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "pd",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190905",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/united-aura-252016/zones/europe-west3-b/disks/pd-tf"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "pd-tf",
            "instance_id": "5838292396479544843",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-2-4096",
            "metadata": {
              "ssh-keys": "isakovasvitlana:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCtLsBrVF+9zEcsC58bhZEdbCjGlWjHOH+sJxi+51TB6qgkwZv3FUxuYOVoCks+/JSIP1TChXZS7Qu3WVDDxVnH8Pmon4nlHZdsCvIVeM0kPIjuoWnebwqG9IQaJ9gWHVwhaor/ORtWruu1O6Us6GSjaxamK1Oni27nMeTjKE66cdQ79kR+Srt1G/dHxRqagc8CzLfPMN0wX6y992qOAx4Z4AK0qLidAFRHabqGzWNdtdfZ1icMzHFUwBRwupIJwMJ3nWiUuepR8n6+QKxxq56h81niHOxj6rvhN10Utfd9VbT/3hDuCwO12ulqL/ct4HT2TE5pIo92DkaLK7Iv+ILt isakovasvitlana\n"
            },
            "metadata_fingerprint": "Y56QLwrEoIE=",
            "name": "pd-tf",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.119.209",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/united-aura-252016/global/networks/default",
                "network_ip": "10.156.0.41",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/united-aura-252016/regions/europe-west3/subnetworks/default",
                "subnetwork_project": "united-aura-252016"
              }
            ],
            "project": "united-aura-252016",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/united-aura-252016/zones/europe-west3-b/instances/pd-tf",
            "tags": [
              "http-app-8081",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "G1tVckNeCMI=",
            "zone": "europe-west3-b"
          }
        }
      ]
    }
  ]
}